Criar endpoints de busca de pacotes por status e destinatário